--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGO_URI = mongodb+srv://admin:admin12345@cluster0.v9pun.mongodb.net/url-shortner?retryWrites=true&w=majority&appName=Cluster0
+
+
+JWT_SECRET = "$ahil@123"
